--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,6 +18,9 @@
         <section id="items">
             <div class="section_content">
                 <div class="container-fluid items">
+<!--                    <div class="alert alert-warning" role="alert" th:if="${account != null}">-->
+<!--                        account test-->
+<!--                    </div>-->
                     <div class="items_header">
                         <h2>ALL ITEMS</h2>
                         <div class="divider"></div>
