--- a/src/main/resources/static/css/sign-up.scss
+++ b/src/main/resources/static/css/sign-up.scss
@@ -53,7 +53,7 @@ main {
         height: 100vh;
         max-width: 300px;
         flex: 1 1 0;
-        padding: 3rem 2rem;
+        padding: 3rem 1.5rem;
         background-color: #F8F9FA;
         box-shadow: 0 20px 20px rgba(0, 0, 0, 0.1);
         z-index: 100;
@@ -431,8 +431,8 @@ main {
                                         font-size: 12px;
                                     }
 
-                                    a.send_mail {
-                                        display: inline-block;
+                                    a.send_mail,
+                                    a.check_number {
                                         background-color: #FFFFFF;
                                         border: 1px solid #c5c5c5;
                                         color: black;
@@ -441,6 +441,14 @@ main {
                                         text-align: center;
                                         padding-top: 5px;
                                         border-radius: 2px;
+                                    }
+
+                                    a.send_mail {
+                                        display: inline-block;
+                                    }
+
+                                    a.check_number {
+                                        display: none;
                                     }
 
                                     a.find_addr {
