[FIX] - 타임리프 SpringActionTagProcessor 관련 이슈 해결

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -69,7 +69,8 @@ main .sidebar .top_nav {
 main .sidebar .top_nav li {
   display: inline-block;
 }
-main .sidebar .top_nav li a {
+main .sidebar .top_nav li a,
+main .sidebar .top_nav li button {
   display: block;
   padding: 0 7px 0 0;
   font-size: 10px;
@@ -80,6 +81,11 @@ main .sidebar .top_nav li a {
 }
 main .sidebar .top_nav li a:hover {
   color: #cccccc;
+}
+main .sidebar .top_nav li button {
+  outline: none;
+  background: none;
+  border: none;
 }
 main .sidebar .top_menu {
   display: flex;
@@ -202,8 +208,14 @@ main .content nav .menu .menu_link {
 main .content nav .menu .menu_link li {
   padding: 20px 0;
 }
-main .content nav .menu .menu_link li a {
+main .content nav .menu .menu_link li a,
+main .content nav .menu .menu_link li button {
   font-size: 13px;
+}
+main .content nav .menu .menu_link li button {
+  outline: none;
+  background: none;
+  border: none;
 }
 main .content nav .menu .menu_link li .account_menu {
   position: absolute;
