--- a/src/main/resources/static/css/board.scss
+++ b/src/main/resources/static/css/board.scss
@@ -91,7 +91,8 @@ main {
             li {
                 display: inline-block;
 
-                a {
+                a,
+                button {
                     display: block;
                     padding: 0 7px 0 0;
                     font-size: 10px;
@@ -104,8 +105,13 @@ main {
                 a:hover {
                     color: #cccccc;
                 }
-            }
 
+                button {
+                    outline: none;
+                    background: none;
+                    border: none;
+                }
+            }
         }
 
         .top_menu {
@@ -128,7 +134,7 @@ main {
 
             .category>ul>li,
             .boardinfo>ul>li {
-                width: 110px;
+                width: 90px;
                 margin-right: 15px;
                 height: 22px;
 
@@ -223,7 +229,6 @@ main {
         padding-top: 70px;
         padding-left: 300px;
 
-        /* nav */
         nav {
             position: fixed;
             top: 0;
@@ -249,8 +254,15 @@ main {
                     li {
                         padding: 20px 0;
 
-                        a {
+                        a,
+                        button {
                             font-size: 13px;
+                        }
+
+                        button {
+                            outline: none;
+                            background: none;
+                            border: none;
                         }
 
                         .account_menu {
