--- a/src/main/resources/static/css/checked-email.css
+++ b/src/main/resources/static/css/checked-email.css
@@ -73,7 +73,8 @@ main .sidebar .top_nav {
 main .sidebar .top_nav li {
   display: inline-block;
 }
-main .sidebar .top_nav li a {
+main .sidebar .top_nav li a,
+main .sidebar .top_nav li button {
   display: block;
   padding: 0 7px 0 0;
   font-size: 10px;
@@ -84,6 +85,11 @@ main .sidebar .top_nav li a {
 }
 main .sidebar .top_nav li a:hover {
   color: #cccccc;
+}
+main .sidebar .top_nav li button {
+  outline: none;
+  background: none;
+  border: none;
 }
 main .sidebar .top_menu {
   display: flex;
@@ -103,7 +109,7 @@ main .sidebar .top_menu .boardinfo > h2 {
 }
 main .sidebar .top_menu .category > ul > li,
 main .sidebar .top_menu .boardinfo > ul > li {
-  width: 110px;
+  width: 90px;
   margin-right: 15px;
   height: 22px;
 }
@@ -206,8 +212,14 @@ main .content nav .menu .menu_link {
 main .content nav .menu .menu_link li {
   padding: 20px 0;
 }
-main .content nav .menu .menu_link li a {
+main .content nav .menu .menu_link li a,
+main .content nav .menu .menu_link li button {
   font-size: 13px;
+}
+main .content nav .menu .menu_link li button {
+  outline: none;
+  background: none;
+  border: none;
 }
 main .content nav .menu .menu_link li .account_menu {
   position: absolute;
