--- a/src/main/resources/static/css/sign-up.scss
+++ b/src/main/resources/static/css/sign-up.scss
@@ -78,7 +78,8 @@ main {
             li {
                 display: inline-block;
 
-                a {
+                a,
+                button {
                     display: block;
                     padding: 0 7px 0 0;
                     font-size: 10px;
@@ -91,8 +92,13 @@ main {
                 a:hover {
                     color: #cccccc;
                 }
-            }
 
+                button {
+                    outline: none;
+                    background: none;
+                    border: none;
+                }
+            }
         }
 
         .top_menu {
@@ -115,7 +121,7 @@ main {
 
             .category>ul>li,
             .boardinfo>ul>li {
-                width: 110px;
+                width: 90px;
                 margin-right: 15px;
                 height: 22px;
 
