--- a/src/main/resources/static/css/checked-email.css
+++ b/src/main/resources/static/css/checked-email.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
 @font-face {
   font-family: "JeonjuCraftMjB";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2310@1.0/JeonjuCraftMjB.woff2") format("woff2");
@@ -30,13 +31,43 @@ li {
   list-style: none;
 }
 
-button {
-  outline: none;
+button:focus {
   border: none;
-  border-radius: 6px;
-  cursor: pointer;
-  padding: 5px 10px;
+  outline: none;
+}
+
+button.black_btn {
+  display: inline-block;
+  width: 130px;
+  padding: 10px 8px 10px 8px;
+  font-size: 13px;
+  border: 1px solid transparent;
+  vertical-align: middle;
+  text-align: center;
   color: #fff;
+  background-color: #151515;
+  border-radius: 0px !important;
+}
+
+button.black_btn:hover {
+  background-color: #474747;
+}
+
+button.white_btn {
+  display: inline-block;
+  width: 130px;
+  padding: 10px 8px 10px 8px;
+  font-size: 13px;
+  border: 1px solid #e2e2e2;
+  vertical-align: middle;
+  text-align: center;
+  color: #222;
+  background-color: #fff;
+  border-radius: 0px !important;
+}
+
+button.white_btn:hover {
+  border: 1px solid black;
 }
 
 /* custom css start */
@@ -49,6 +80,7 @@ main .sidebar {
   top: 0;
   left: 0;
   height: 100vh;
+  min-width: 295px;
   max-width: 300px;
   flex: 1 1 0;
   padding: 3rem 1.5rem;
@@ -185,6 +217,8 @@ main .content {
   flex: 1 1 0;
   padding-top: 70px;
   padding-left: 300px;
+  /* nav */
+  /* content */
   /* footer */
 }
 main .content nav {
@@ -352,4 +386,5 @@ main .content footer .footer_copyright {
   main .content nav .menu_toggle {
     display: block;
   }
-}/*# sourceMappingURL=checked-email.css.map */
+}
+/* custom css start *//*# sourceMappingURL=checked-email.css.map */
