--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
 @font-face {
   font-family: "JeonjuCraftMjB";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2310@1.0/JeonjuCraftMjB.woff2") format("woff2");
@@ -386,51 +385,4 @@ main .content footer .footer_copyright {
   main .content nav .menu_toggle {
     display: block;
   }
-}
-/* custom css start */
-main .content #items {
-  overflow: hidden;
-}
-main .content #items .items_header h2 {
-  font-size: 15px;
-  text-align: center;
-}
-main .content #items .items_header .divider {
-  width: 70px;
-  height: 1px;
-  background: #aaa;
-  margin: 20px auto;
-}
-main .content #items .items_body {
-  width: 80%;
-  margin: 0 auto;
-}
-main .content #items .items_body .img_box {
-  overflow: hidden;
-  position: relative;
-}
-main .content #items .items_body .img_box .desc {
-  padding: 10px 0;
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
-  opacity: 0.7;
-  color: #000;
-  transition: 0.3s;
-}
-main .content #items .items_body .img_box .desc .name {
-  font-weight: normal;
-  line-height: 28px;
-  font-size: 14px;
-  letter-spacing: 0em;
-  color: #111111;
-  text-align: left;
-}
-main .content #items .items_body .img_box .desc .price {
-  font-size: 14px;
-  color: #111111;
-  font-weight: bold;
-}
-main .content #items .items_body .img_box:hover .desc {
-  top: 80%;
-}/*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=common.css.map */
