--- a/src/main/resources/static/css/modify.css
+++ b/src/main/resources/static/css/modify.css
@@ -388,49 +388,142 @@ main .content footer .footer_copyright {
   }
 }
 /* custom css start */
-main .content #items {
-  overflow: hidden;
-}
-main .content #items .items_header h2 {
+main .content #signup .signup .signup_header h2 {
   font-size: 15px;
   text-align: center;
 }
-main .content #items .items_header .divider {
+main .content #signup .signup .signup_header .divider {
   width: 70px;
   height: 1px;
   background: #aaa;
   margin: 20px auto;
 }
-main .content #items .items_body {
+main .content #signup .signup .signup_body {
+  display: flex;
+  justify-content: center;
+}
+main .content #signup .signup .signup_body form {
   width: 80%;
-  margin: 0 auto;
 }
-main .content #items .items_body .img_box {
-  overflow: hidden;
-  position: relative;
-}
-main .content #items .items_body .img_box .desc {
-  padding: 10px 0;
+main .content #signup .signup .signup_body form table {
   width: 100%;
-  height: 100%;
-  background-color: #fff;
-  opacity: 0.7;
-  color: #000;
-  transition: 0.3s;
+  position: relative;
+  margin: 10px 0 0;
+  border: 1px solid #d7d5d5;
+  border-top: 0;
+  border-left-width: 0;
+  border-right-width: 0;
+  color: #fff;
+  line-height: 1.5;
 }
-main .content #items .items_body .img_box .desc .name {
+main .content #signup .signup .signup_body form table tbody {
+  font-size: 12px;
+  color: #353535;
+}
+main .content #signup .signup .signup_body form table tbody th {
+  padding: 11px 0 10px 18px;
+  border: 1px solid #dfdfdf;
+  border-bottom-width: 0;
+  border-left-width: 0;
+  border-right-width: 0;
   font-weight: normal;
-  line-height: 28px;
-  font-size: 14px;
-  letter-spacing: 0em;
-  color: #111111;
-  text-align: left;
+  vertical-align: middle;
 }
-main .content #items .items_body .img_box .desc .price {
-  font-size: 14px;
-  color: #111111;
-  font-weight: bold;
+main .content #signup .signup .signup_body form table tbody th span {
+  color: #008BCC;
 }
-main .content #items .items_body .img_box:hover .desc {
-  top: 80%;
-}/*# sourceMappingURL=index.css.map */
+main .content #signup .signup .signup_body form table tbody td {
+  border-top: 1px solid #dfdfdf;
+  vertical-align: middle;
+  padding: 11px 0 10px 18px;
+}
+main .content #signup .signup .signup_body form table tbody td span.id_input_re_1,
+main .content #signup .signup .signup_body form table tbody td span.id_input_re_2,
+main .content #signup .signup .signup_body form table tbody td span.mail_input_re_1,
+main .content #signup .signup .signup_body form table tbody td span.mail_input_re_2,
+main .content #signup .signup .signup_body form table tbody td span.final_id_ck,
+main .content #signup .signup .signup_body form table tbody td span.final_pw_ck,
+main .content #signup .signup .signup_body form table tbody td span.final_pwck_ck,
+main .content #signup .signup .signup_body form table tbody td span.final_nickname_ck,
+main .content #signup .signup .signup_body form table tbody td span.final_mail_ck,
+main .content #signup .signup .signup_body form table tbody td span.final_addr_ck,
+main .content #signup .signup .signup_body form table tbody td span.pwck_input_re_1,
+main .content #signup .signup .signup_body form table tbody td span.pwck_input_re_2 {
+  display: none;
+}
+main .content #signup .signup .signup_body form table tbody td input {
+  height: 29px;
+  padding: 2px 4px;
+  border: 1px solid #d5d5d5;
+}
+main .content #signup .signup .signup_body form table tbody td input:focus::-moz-placeholder {
+  color: transparent;
+}
+main .content #signup .signup .signup_body form table tbody td input:focus::placeholder {
+  color: transparent;
+}
+main .content #signup .signup .signup_body form table tbody td select {
+  width: 60px;
+  height: 30px;
+  line-height: 29px;
+  min-height: 30px;
+  border: 1px solid #ddd;
+  padding: 0 10px 0 5px;
+  background-color: #fff;
+  font-size: 12px;
+}
+main .content #signup .signup .signup_body form table tbody td a.send_mail,
+main .content #signup .signup .signup_body form table tbody td a.check_number {
+  background-color: #FFFFFF;
+  border: 1px solid #c5c5c5;
+  color: black;
+  width: 105px;
+  height: 28px;
+  text-align: center;
+  padding-top: 5px;
+  border-radius: 2px;
+}
+main .content #signup .signup .signup_body form table tbody td a.send_mail {
+  display: inline-block;
+}
+main .content #signup .signup .signup_body form table tbody td a.check_number {
+  display: none;
+}
+main .content #signup .signup .signup_body form table tbody td a.find_addr {
+  display: inline-block;
+  background-color: #FFFFFF;
+  border: 1px solid #c5c5c5;
+  color: black;
+  width: 80px;
+  height: 28px;
+  text-align: center;
+  vertical-align: middle;
+  padding-top: 5px;
+  border-radius: 2px;
+}
+main .content #signup .signup .signup_body form .btn_box {
+  padding: 10px 0;
+  text-align: center;
+  display: block;
+  margin-top: 30px;
+}
+
+@media (max-width: 786px) {
+  main .sidebar {
+    position: fixed;
+    left: -300px;
+    width: 100%;
+  }
+  main .sidebar.active {
+    left: 0;
+  }
+  main .content {
+    padding-left: 0;
+  }
+  main .content nav .menu {
+    display: none;
+  }
+  main .content nav .menu_toggle {
+    display: block;
+  }
+}/*# sourceMappingURL=modify.css.map */
