--- a/src/main/resources/static/css/orderlist.css
+++ b/src/main/resources/static/css/orderlist.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
 @font-face {
   font-family: "JeonjuCraftMjB";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2310@1.0/JeonjuCraftMjB.woff2") format("woff2");
@@ -30,13 +31,43 @@ li {
   list-style: none;
 }
 
-button {
-  outline: none;
+button:focus {
   border: none;
-  border-radius: 6px;
-  cursor: pointer;
-  padding: 5px 10px;
+  outline: none;
+}
+
+button.black_btn {
+  display: inline-block;
+  width: 130px;
+  padding: 10px 8px 10px 8px;
+  font-size: 13px;
+  border: 1px solid transparent;
+  vertical-align: middle;
+  text-align: center;
   color: #fff;
+  background-color: #151515;
+  border-radius: 0px !important;
+}
+
+button.black_btn:hover {
+  background-color: #474747;
+}
+
+button.white_btn {
+  display: inline-block;
+  width: 130px;
+  padding: 10px 8px 10px 8px;
+  font-size: 13px;
+  border: 1px solid #e2e2e2;
+  vertical-align: middle;
+  text-align: center;
+  color: #222;
+  background-color: #fff;
+  border-radius: 0px !important;
+}
+
+button.white_btn:hover {
+  border: 1px solid black;
 }
 
 /* custom css start */
@@ -49,6 +80,7 @@ main .sidebar {
   top: 0;
   left: 0;
   height: 100vh;
+  min-width: 295px;
   max-width: 300px;
   flex: 1 1 0;
   padding: 3rem 1.5rem;
@@ -185,6 +217,8 @@ main .content {
   flex: 1 1 0;
   padding-top: 70px;
   padding-left: 300px;
+  /* nav */
+  /* content */
   /* footer */
 }
 main .content nav {
@@ -212,8 +246,14 @@ main .content nav .menu .menu_link {
 main .content nav .menu .menu_link li {
   padding: 20px 0;
 }
-main .content nav .menu .menu_link li a {
+main .content nav .menu .menu_link li a,
+main .content nav .menu .menu_link li button {
   font-size: 13px;
+}
+main .content nav .menu .menu_link li button {
+  outline: none;
+  background: none;
+  border: none;
 }
 main .content nav .menu .menu_link li .account_menu {
   position: absolute;
@@ -289,60 +329,6 @@ main .content nav .menu_toggle input:checked + label span:nth-child(3) {
   top: 50%;
   transform: rotate(-45deg);
 }
-main .content #orderlist .orderlist .orderlist_header h2 {
-  font-size: 15px;
-  text-align: center;
-}
-main .content #orderlist .orderlist .orderlist_header .divider {
-  width: 70px;
-  height: 1px;
-  background: #aaa;
-  margin: 20px auto;
-}
-main .content #orderlist .orderlist .orderlist_body {
-  width: 100%;
-  margin: 0 auto;
-}
-main .content #orderlist .orderlist .orderlist_body .title {
-  margin: 40px 0 10px 10px;
-}
-main .content #orderlist .orderlist .orderlist_body .title h3 {
-  color: #353535;
-  font-size: 12px;
-  font-weight: bold;
-}
-main .content #orderlist .orderlist .orderlist_body table {
-  width: 100%;
-  border-spacing: 0;
-  border-collapse: collapse;
-  border-top: 1px solid #e5e5e5;
-  position: relative;
-  margin: 10px 0 0;
-  border: 1px solid #e5e5e5;
-  border-right: none;
-  border-left: none;
-  color: #fff;
-  line-height: 1.7;
-  font-size: 12px;
-  letter-spacing: 0em !important;
-}
-main .content #orderlist .orderlist .orderlist_body table thead tr th {
-  text-align: center;
-  padding: 15px 0 14px;
-  color: #353535;
-  vertical-align: middle;
-  font-weight: normal;
-  background-color: #fff;
-}
-main .content #orderlist .orderlist .orderlist_body p {
-  margin: -1px 0 0;
-  border-bottom: 1px solid #ddd;
-  padding: 50px 0;
-  text-align: center;
-  color: #757575;
-  font-weight: normal;
-  font-size: 12px;
-}
 main .content footer {
   padding: 100px 0;
 }
@@ -400,4 +386,59 @@ main .content footer .footer_copyright {
   main .content nav .menu_toggle {
     display: block;
   }
+}
+/* custom css start */
+main .content #orderlist .orderlist .orderlist_header h2 {
+  font-size: 15px;
+  text-align: center;
+}
+main .content #orderlist .orderlist .orderlist_header .divider {
+  width: 70px;
+  height: 1px;
+  background: #aaa;
+  margin: 20px auto;
+}
+main .content #orderlist .orderlist .orderlist_body {
+  width: 100%;
+  margin: 0 auto;
+}
+main .content #orderlist .orderlist .orderlist_body .title {
+  margin: 40px 0 10px 10px;
+}
+main .content #orderlist .orderlist .orderlist_body .title h3 {
+  color: #353535;
+  font-size: 12px;
+  font-weight: bold;
+}
+main .content #orderlist .orderlist .orderlist_body table {
+  width: 100%;
+  border-spacing: 0;
+  border-collapse: collapse;
+  border-top: 1px solid #e5e5e5;
+  position: relative;
+  margin: 10px 0 0;
+  border: 1px solid #e5e5e5;
+  border-right: none;
+  border-left: none;
+  color: #fff;
+  line-height: 1.7;
+  font-size: 12px;
+  letter-spacing: 0em !important;
+}
+main .content #orderlist .orderlist .orderlist_body table thead tr th {
+  text-align: center;
+  padding: 15px 0 14px;
+  color: #353535;
+  vertical-align: middle;
+  font-weight: normal;
+  background-color: #fff;
+}
+main .content #orderlist .orderlist .orderlist_body p {
+  margin: -1px 0 0;
+  border-bottom: 1px solid #ddd;
+  padding: 50px 0;
+  text-align: center;
+  color: #757575;
+  font-weight: normal;
+  font-size: 12px;
 }/*# sourceMappingURL=orderlist.css.map */
