--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -123,7 +123,7 @@
                                 </tbody>
                             </table>
                             <div class="btn">
-                                <button class="signup_btn" type="submit">회원가입</button>
+                                <button class="signup_btn black_btn" type="submit">회원가입</button>
                             </div>
                         </form>
                     </div>
