--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -53,7 +53,7 @@ button.black_btn:hover {
   background-color: #474747;
 }
 
-button.white_btn {
+a.white_btn {
   display: inline-block;
   width: 130px;
   padding: 10px 8px 10px 8px;
@@ -66,7 +66,7 @@ button.white_btn {
   border-radius: 0px !important;
 }
 
-button.white_btn:hover {
+a.white_btn:hover {
   border: 1px solid black;
 }
 
@@ -388,24 +388,28 @@ main .content footer .footer_copyright {
   }
 }
 /* custom css start */
-main .content #signup .signup .signup_header h2 {
+main .content #modify .modify .modify_header h2 {
   font-size: 15px;
   text-align: center;
 }
-main .content #signup .signup .signup_header .divider {
+main .content #modify .modify .modify_header .divider {
   width: 70px;
   height: 1px;
   background: #aaa;
   margin: 20px auto;
 }
-main .content #signup .signup .signup_body {
+main .content #modify .modify .alert {
+  width: 80%;
+  margin: 45px auto 15px;
+}
+main .content #modify .modify .modify_body {
   display: flex;
   justify-content: center;
 }
-main .content #signup .signup .signup_body form {
+main .content #modify .modify .modify_body form {
   width: 80%;
 }
-main .content #signup .signup .signup_body form table {
+main .content #modify .modify .modify_body form table {
   width: 100%;
   position: relative;
   margin: 10px 0 0;
@@ -416,11 +420,11 @@ main .content #signup .signup .signup_body form table {
   color: #fff;
   line-height: 1.5;
 }
-main .content #signup .signup .signup_body form table tbody {
+main .content #modify .modify .modify_body form table tbody {
   font-size: 12px;
   color: #353535;
 }
-main .content #signup .signup .signup_body form table tbody th {
+main .content #modify .modify .modify_body form table tbody th {
   padding: 11px 0 10px 18px;
   border: 1px solid #dfdfdf;
   border-bottom-width: 0;
@@ -429,40 +433,41 @@ main .content #signup .signup .signup_body form table tbody th {
   font-weight: normal;
   vertical-align: middle;
 }
-main .content #signup .signup .signup_body form table tbody th span {
+main .content #modify .modify .modify_body form table tbody th span {
   color: #008BCC;
 }
-main .content #signup .signup .signup_body form table tbody td {
+main .content #modify .modify .modify_body form table tbody td {
   border-top: 1px solid #dfdfdf;
   vertical-align: middle;
   padding: 11px 0 10px 18px;
 }
-main .content #signup .signup .signup_body form table tbody td span.id_input_re_1,
-main .content #signup .signup .signup_body form table tbody td span.id_input_re_2,
-main .content #signup .signup .signup_body form table tbody td span.mail_input_re_1,
-main .content #signup .signup .signup_body form table tbody td span.mail_input_re_2,
-main .content #signup .signup .signup_body form table tbody td span.final_id_ck,
-main .content #signup .signup .signup_body form table tbody td span.final_pw_ck,
-main .content #signup .signup .signup_body form table tbody td span.final_pwck_ck,
-main .content #signup .signup .signup_body form table tbody td span.final_nickname_ck,
-main .content #signup .signup .signup_body form table tbody td span.final_mail_ck,
-main .content #signup .signup .signup_body form table tbody td span.final_addr_ck,
-main .content #signup .signup .signup_body form table tbody td span.pwck_input_re_1,
-main .content #signup .signup .signup_body form table tbody td span.pwck_input_re_2 {
+main .content #modify .modify .modify_body form table tbody td span.id_input_re_1,
+main .content #modify .modify .modify_body form table tbody td span.id_input_re_2,
+main .content #modify .modify .modify_body form table tbody td span.mail_input_re_1,
+main .content #modify .modify .modify_body form table tbody td span.mail_input_re_2,
+main .content #modify .modify .modify_body form table tbody td span.final_id_ck,
+main .content #modify .modify .modify_body form table tbody td span.final_pw_ck,
+main .content #modify .modify .modify_body form table tbody td span.final_pwck_ck,
+main .content #modify .modify .modify_body form table tbody td span.final_nickname_ck,
+main .content #modify .modify .modify_body form table tbody td span.final_mail_ck,
+main .content #modify .modify .modify_body form table tbody td span.final_addr_ck,
+main .content #modify .modify .modify_body form table tbody td span.pwck_input_re_1,
+main .content #modify .modify .modify_body form table tbody td span.pwck_input_re_2,
+main .content #modify .modify .modify_body form table tbody td span.need_mail_check {
   display: none;
 }
-main .content #signup .signup .signup_body form table tbody td input {
+main .content #modify .modify .modify_body form table tbody td input {
   height: 29px;
   padding: 2px 4px;
   border: 1px solid #d5d5d5;
 }
-main .content #signup .signup .signup_body form table tbody td input:focus::-moz-placeholder {
+main .content #modify .modify .modify_body form table tbody td input:focus::-moz-placeholder {
   color: transparent;
 }
-main .content #signup .signup .signup_body form table tbody td input:focus::placeholder {
+main .content #modify .modify .modify_body form table tbody td input:focus::placeholder {
   color: transparent;
 }
-main .content #signup .signup .signup_body form table tbody td select {
+main .content #modify .modify .modify_body form table tbody td select {
   width: 60px;
   height: 30px;
   line-height: 29px;
@@ -472,8 +477,8 @@ main .content #signup .signup .signup_body form table tbody td select {
   background-color: #fff;
   font-size: 12px;
 }
-main .content #signup .signup .signup_body form table tbody td a.send_mail,
-main .content #signup .signup .signup_body form table tbody td a.check_number {
+main .content #modify .modify .modify_body form table tbody td a.send_mail,
+main .content #modify .modify .modify_body form table tbody td a.check_number {
   background-color: #FFFFFF;
   border: 1px solid #c5c5c5;
   color: black;
@@ -483,13 +488,13 @@ main .content #signup .signup .signup_body form table tbody td a.check_number {
   padding-top: 5px;
   border-radius: 2px;
 }
-main .content #signup .signup .signup_body form table tbody td a.send_mail {
+main .content #modify .modify .modify_body form table tbody td a.send_mail {
   display: inline-block;
 }
-main .content #signup .signup .signup_body form table tbody td a.check_number {
+main .content #modify .modify .modify_body form table tbody td a.check_number {
   display: none;
 }
-main .content #signup .signup .signup_body form table tbody td a.find_addr {
+main .content #modify .modify .modify_body form table tbody td a.find_addr {
   display: inline-block;
   background-color: #FFFFFF;
   border: 1px solid #c5c5c5;
@@ -501,7 +506,7 @@ main .content #signup .signup .signup_body form table tbody td a.find_addr {
   padding-top: 5px;
   border-radius: 2px;
 }
-main .content #signup .signup .signup_body form .btn_box {
+main .content #modify .modify .modify_body form .btn_box {
   padding: 10px 0;
   text-align: center;
   display: block;
@@ -526,4 +531,4 @@ main .content #signup .signup .signup_body form .btn_box {
   main .content nav .menu_toggle {
     display: block;
   }
-}/*# sourceMappingURL=modify.css.map */
+}/*# sourceMappingURL=profile.css.map */
