--- a/src/main/resources/static/css/sign-up.css
+++ b/src/main/resources/static/css/sign-up.css
@@ -53,7 +53,7 @@ button.black_btn:hover {
   background-color: #474747;
 }
 
-button.white_btn {
+a.white_btn {
   display: inline-block;
   width: 130px;
   padding: 10px 8px 10px 8px;
@@ -66,7 +66,7 @@ button.white_btn {
   border-radius: 0px !important;
 }
 
-button.white_btn:hover {
+a.white_btn:hover {
   border: 1px solid black;
 }
 
@@ -501,7 +501,7 @@ main .content #signup .signup .signup_body form table tbody td a.find_addr {
   padding-top: 5px;
   border-radius: 2px;
 }
-main .content #signup .signup .signup_body form .btn {
+main .content #signup .signup .signup_body form .btn_box {
   padding: 10px 0;
   text-align: center;
   display: block;
