--- a/src/main/resources/static/css/sign-up.scss
+++ b/src/main/resources/static/css/sign-up.scss
@@ -133,7 +133,7 @@ main {
                             }
                         }
 
-                        .btn {
+                        .btn_box {
                             padding: 10px 0;
                             text-align: center;
                             display: block;
