--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -4,7 +4,7 @@
 <head>
     <div th:replace="fragments.html :: head"></div>
     <!--  사용자 CSS -->
-    <link rel="stylesheet" href="css/sign-up.css">
+    <link rel="stylesheet" href="/css/profile.css">
 </head>
 
 <body>
@@ -16,15 +16,18 @@
             <div th:replace="fragments.html :: nav"></div>
 
             <!-- signup section -->
-            <section id="signup">
-                <div class="container signup">
-                    <div class="signup_header">
-                        <h2>SIGNUP</h2>
+            <section id="modify">
+                <div class="container modify">
+                    <div class="modify_header">
+                        <h2>Modify</h2>
                         <div class="divider"></div>
                     </div>
-                    <div class="signup_body mt-5">
-
-                        <form id="signUpForm" th:action="@{/sign-up}" th:object="${signUpForm}" method="post"
+                    <div th:if="${message}" class="alert alert-success alert-dismissible fade show">
+                        <i class="xi-check-min me-2"></i><span style="font-size: 14px;" th:text="${message}">메시지</span>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                    </div>
+                    <div class="modify_body mt-5">
+                        <form id="profileForm" th:action="@{/settings/profile}" th:object="${profileForm}" method="post"
                             onsubmit="return chkPW()">
                             <table>
                                 <colgroup>
@@ -39,7 +42,7 @@
                                         <td>
                                             <div class="id_input_box">
                                                 <input class="id_input" th:field="*{userId}" type="text" minlength="5"
-                                                    maxlength="20">
+                                                       maxlength="20" disabled="true">
                                                 (영문 소문자/숫자, 5~20자)
                                             </div>
                                             <span class="id_input_re_1 text-success">사용 가능한 아이디입니다.</span>
@@ -49,11 +52,11 @@
                                     </tr>
                                     <tr>
                                         <th scope="row">
-                                            <label th:for="*{password}">비밀번호 <span>*</span></label>
+                                            <label th:for="*{newPassword}">비밀번호 <span>*</span></label>
                                         </th>
                                         <td>
                                             <div class="password_input_box">
-                                                <input class="pw_input" th:field="*{password}" type="password"
+                                                <input class="pw_input" th:field="*{newPassword}" type="password"
                                                     minlength="8" maxlength="20">
                                                 (영문 대소문자/숫자, 8~20자)
                                             </div>
@@ -62,11 +65,11 @@
                                     </tr>
                                     <tr>
                                         <th scope="row">
-                                            <label th:for="*{passwordConfirm}">비밀번호 확인 <span>*</span></label>
+                                            <label th:for="*{newPasswordConfirm}">비밀번호 확인 <span>*</span></label>
                                         </th>
                                         <td>
                                             <div class="password_confirm_input_box">
-                                                <input class="pwck_input" th:field="*{passwordConfirm}"
+                                                <input class="pwck_input" th:field="*{newPasswordConfirm}"
                                                     type="password" minlength="8" maxlength="20">
                                                 (영문 대소문자/숫자, 8~20자)
                                             </div>
@@ -92,7 +95,7 @@
                                         </th>
                                         <td>
                                             <div class="mail_input_box mb-1">
-                                                <input class="mail_input" th:field="*{email}" type="email">
+                                                <input  class="mail_input" th:field="*{email}" type="email">
                                             </div>
                                             <div class="mail_check_box">
                                                 <input class="mail_check_input" disabled="disabled">
@@ -102,6 +105,7 @@
                                             <span class="mail_input_re_1 text-success">사용 가능한 이메일입니다.</span>
                                             <span class="mail_input_re_2 text-danger">이메일이 이미 존재합니다.</span>
                                             <span class="final_mail_ck text-danger">이메일을 입력해주세요.</span>
+                                            <span class="need_mail_check text-danger">이메일 인증이 필요합니다.</span>
                                         </td>
                                     </tr>
                                     <tr>
@@ -119,11 +123,13 @@
                                                 readonly="readonly">
                                             <span class="final_addr_ck text-danger">주소를 입력해주세요.</span>
                                         </td>
+
                                     </tr>
                                 </tbody>
                             </table>
                             <div class="btn_box">
-                                <button class="signup_btn black_btn" type="submit">회원가입</button>
+                                <button class="modify_btn black_btn" type="submit">회원정보수정</button>
+                                <a class="white_btn" th:href="@{/}">취소</a>
                             </div>
                         </form>
                     </div>
@@ -142,8 +148,6 @@
     <script>
 
         /* 유효성 검사 통과유무 변수 */
-        let idCheck = false;            // 아이디
-        let idckCheck = false;          // 아이디 중복 검사
         let pwCheck = false;            // 비번
         let pwckCheck = false;          // 비번 확인
         let pwckcorCheck = false;       // 비번 확인 일치 확인
@@ -153,27 +157,18 @@
         let addressCheck = false        // 주소
 
         let code = ""; // 이메일전송 인증번호 저장위한 변수
+        let before_email = $('.mail_input').val(); // 기존 이메일
 
         $(document).ready(function () {
-            //회원가입 버튼(회원가입 기능 작동)
-            $(".signup_btn").click(function () {
+            //회원정보수정 버튼(회원정보수정 기능 작동)
+            $(".modify_btn").click(function () {
 
                 /* 입력값 변수 */
-                let id = $('.id_input').val(); // id 입력란
                 let pw = $('.pw_input').val(); // 비밀번호 입력란
                 let pwck = $('.pwck_input').val(); // 비밀번호 확인 입력란
                 let nickname = $('.nickname_input').val(); // 닉네임 입력란
                 let mail = $('.mail_input').val(); // 이메일 입력란
                 let address = $('.address_input_3').val(); // 주소 입력란
-
-                /* 아이디 유효성검사 */
-                if (id === "") {
-                    $('.final_id_ck').css('display', 'inline-block')
-                    idCheck = false;
-                } else {
-                    $('.final_id_ck').css('display', 'none')
-                    idCheck = true;
-                }
 
                 /* 비밀번호 유효성 검사 */
                 if (pw === "") {
@@ -211,65 +206,29 @@
                     mailCheck = true;
                 }
 
+                if (before_email === mail) {
+                    mailnumCheck = true;
+                }
+
                 /* 주소 유효성 검사 */
                 if (address === "") {
-                    $('.final_addr_ck').css('display', 'inline-block')
+                    $('.final_addr_ck').css('display', 'inline-block');
                     addressCheck = false;
                 } else {
-                    $('.final_addr_ck').css('display', 'none')
+                    $('.final_addr_ck').css('display', 'none');
                     addressCheck = true;
                 }
 
-                console.log(idCheck);
-                console.log(idckCheck);
-                console.log(pwCheck);
-                console.log(pwckCheck);
-                console.log(pwckcorCheck);
-                console.log(nicknameCheck);
-                console.log(mailCheck);
-                console.log(mailnumCheck);
-                console.log(addressCheck);
-
                 /* 최종 유효성 검사 */
-                if (idCheck && idckCheck && pwCheck && pwckCheck && pwckcorCheck && nicknameCheck && mailCheck && mailnumCheck && addressCheck) {
-                    $('#signUpForm').attr("action", "/sign-up");
-                    $('#signUpForm').submit();
+                if (pwCheck && pwckCheck && pwckcorCheck && mailCheck && mailnumCheck && nicknameCheck && addressCheck) {
+                    $('#profileForm').attr("action", "/settings/profile");
+                    $('#profileForm').submit();
+                } else if (!mailnumCheck) {
+                    $('.need_mail_check').css('display', 'inline-block');
                 }
                 return false;
             });
         });
-
-        //아이디 중복검사
-        $('.id_input').on("propertychange change keyup paste input", function () {
-            const userId = $('.id_input').val();
-            const data = { userId: userId }
-
-            console.log(data);
-
-            $.ajax({
-                type: "POST",
-                url: "/check-id",
-                data: data,
-                success: function (result) {
-                    if (result !== 'fail' && userId.length > 4) {
-                        $('.id_input_re_1').css("display", "inline-block");
-                        $('.id_input_re_2').css("display", "none");
-                        $('.final_id_ck').css("display", "none");
-                        idckCheck = true;
-                    } else if (result === 'fail' && userId.length > 4) {
-                        $('.id_input_re_2').css("display", "inline-block");
-                        $('.id_input_re_1').css("display", "none");
-                        $('.final_id_ck').css("display", "none");
-                        idckCheck = false;
-                    } else {
-                        $('.id_input_re_1').css("display", "none");
-                        $('.id_input_re_2').css("display", "none");
-                        $('.final_id_ck').css("display", "none");
-                        idckCheck = false;
-                    }
-                }
-            })
-        })
 
         /* 비밀번호 확인 일치 유효성 검사 */
         $('.pwck_input').on("propertychange change keyup paste input", function () {
@@ -348,8 +307,6 @@
                     code = data;
                 }
             })
-
-
         })
 
         // 인증 번호 일치 여부
@@ -357,14 +314,17 @@
             let check_input = $(".mail_check_input"); // 인증 번호 입력란
             let input_code = $(".mail_check_input").val(); // 사용자가 입력한 인증 번호
             let check_result = $(".mail_input_warn"); // 비교 결과
+            let need_mail_check = $(".need_mail_check");
 
             if (input_code === code) {
                 alert("인증되었습니다.");
                 check_input.attr("disabled", true);
                 check_input.css("background-color", "#fafafa");
+                need_mail_check.css("display", "none");
                 mailnumCheck = true;
             } else {
                 alert("인증번호를 다시 확인해주세요.");
+                need_mail_check.css("display", "none");
                 mailnumCheck = false;
             }
         }
